k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix-cubepath
  namespace: matrix-cubepath
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3939
  selector:
    app: matrix-cubepath
