k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: matrix-cubepath
  namespace: matrix-cubepath
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`matrix.stackbp.es`)
      kind: Rule
      services:
        - name: matrix-cubepath
          port: 80
  tls:
    secretName: matrix-cubepath-tls
